<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:ellipsize="start"
        android:gravity="end"
        android:inputType="none"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_AC"
                style="@style/ActionButton"
                android:text="@string/action_btn_AC" />

            <TextView
                android:id="@+id/btn_breketOpen"
                style="@style/ActionButton"
                android:text="@string/action_btn_breketOpen" />

            <TextView
                android:id="@+id/btn_breketClose"
                style="@style/ActionButton"
                android:text="@string/action_btn_breketClose" />

            <TextView
                android:id="@+id/btn_div"
                style="@style/ActionButton"
                android:text="@string/action_btn_div" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_7"
                style="@style/NumberButton"
                android:text="@string/number_btn_7" />

            <TextView
                android:id="@+id/btn_8"
                style="@style/NumberButton"
                android:text="@string/number_btn_8" />

            <TextView
                android:id="@+id/btn_9"
                style="@style/NumberButton"
                android:text="@string/number_btn_9" />

            <TextView
                android:id="@+id/btn_multi"
                style="@style/ActionButton"
                android:text="@string/action_btn_multi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_4"
                style="@style/NumberButton"
                android:text="@string/number_btn_4" />

            <TextView
                android:id="@+id/btn_5"
                style="@style/NumberButton"
                android:text="@string/number_btn_5" />

            <TextView
                android:id="@+id/btn_6"
                style="@style/NumberButton"
                android:text="@string/number_btn_6" />

            <TextView
                android:id="@+id/btn_plus"
                style="@style/ActionButton"
                android:text="@string/action_btn_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_1"
                style="@style/NumberButton"
                android:text="@string/number_btn_1" />

            <TextView
                android:id="@+id/btn_2"
                style="@style/NumberButton"
                android:text="@string/number_btn_2" />

            <TextView
                android:id="@+id/btn_3"
                style="@style/NumberButton"
                android:text="@string/number_btn_3" />

            <TextView
                android:id="@+id/btn_minus"
                style="@style/ActionButton"
                android:text="@string/action_btn_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_point"
                style="@style/NumberButton"
                android:text="@string/number_btn_point" />

            <TextView
                android:id="@+id/btn_0"
                style="@style/NumberButton"
                android:text="@string/number_btn_0" />

            <TextView
                android:id="@+id/btn_back"
                style="@style/NumberButton"
                android:text="@string/number_btn_back" />

            <TextView
                android:id="@+id/btn_equl"
                style="@style/ActionButton"
                android:text="@string/action_btn_equal"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>